--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Feb 23 19:22:32 CST 2019
-sdk.dir=C\:\\Users\\Yichen\\AppData\\Local\\Android\\Sdk
+#Tue Apr 02 20:27:33 CDT 2019
+sdk.dir=C\:\\Users\\brett\\AppData\\Local\\Android\\Sdk
