--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".Settings"></activity>
         <activity
             android:name=".Vocab2"
-            android:parentActivityName=".MainPage"/>
-        <activity android:name=".MainPage"
-            android:parentActivityName=".Login"/>
+            android:parentActivityName=".MainPage" />
+        <activity
+            android:name=".MainPage"
+            android:parentActivityName=".Login" />
         <activity android:name=".Login" />
         <activity android:name=".Answerspage" />
-        <activity android:name=".questionslist"
-            android:parentActivityName=".MockExam"/>
-        <activity android:name=".MockExam"
-            android:parentActivityName=".MainPage"/>
+        <activity
+            android:name=".questionslist"
+            android:parentActivityName=".MockExam" />
+        <activity
+            android:name=".MockExam"
+            android:parentActivityName=".MainPage" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
