--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 02 20:27:33 CDT 2019
-sdk.dir=C\:\\Users\\brett\\AppData\\Local\\Android\\Sdk
+#Tue Apr 30 00:25:22 CDT 2019
+sdk.dir=C\:\\Users\\Yichen\\AppData\\Local\\Android\\Sdk
